--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
   max-width: 900px;
@@ -35,13 +38,16 @@ form input {
   display: block;
   margin-bottom: 0.75rem;
 }
-
+form input{
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+}
 .card-container {
   display: flex;
   gap: 1.5rem;
   flex-wrap: wrap;
   margin-top: 2rem;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: stretch;
 }
 
